--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kzykhys/ciconia",
+    "name": "jbaron/ciconia",
     "description": "The Markdown parser for PHP5.4",
     "keywords": ["markdown", "parser", "cli"],
     "license": "MIT",
@@ -7,18 +7,20 @@
         {
             "name": "Kazuyuki Hayashi",
             "email": "hayashi@valnur.net"
+        },
+        {
+            "name": "Jost Baron",
+            "email": "jost.baron@mein-bauernhof.de"
         }
     ],
     "minimum-stability": "stable",
     "autoload": {
-        "psr-0": {
-            "": "src/"
+        "psr-4": {
+            "Ciconia\\": "src/Ciconia/"
         }
     },
     "require": {
-        "php": ">5.4.0",
-        "symfony/options-resolver": ">=2.3,<2.5-dev",
-        "symfony/console":">=2.3,<2.5-dev"
+        "php": ">5.4.0"
     },
     "require-dev": {
         "symfony/finder": ">=2.3,<2.5-dev",
