--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         }
     },
     "require": {
-        "php": ">5.4.0"
+        "php": ">5.4.0",
+        "symfony/options-resolver": "*"
     },
     "require-dev": {
         "symfony/finder": ">=2.3,<2.5-dev",
